--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.23.2",
     "lucide-react": "^0.525.0",
+    "luxon": "^3.6.1",
     "next": "^15.2.3",
     "pg": "^8.16.3",
     "react": "^19.0.0",
