--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.14.0",
     "@clerk/nextjs": "^6.23.2",
     "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
     "next": "^15.2.3",
     "pg": "^8.16.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "postcss": "^8",
