--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
